// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-0:checked + label {
  border-color: #0059C8;
  background: #0059C8;
}

.emotion-0:disabled + label {
  border-color: #CFD9E0;
  background: #CFD9E0;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #0059C8;
  background: #0059C8;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #5A657C;
}

.emotion-0:disabled + label {
  border-color: #CFD9E0;
  background: #CFD9E0;
}

.emotion-0:disabled + label svg {
  fill: #CFD9E0;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #CFD9E0;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  font-weight: 500;
  margin-bottom: 0;
}

.emotion-5 {
  margin-bottom: 0;
  margin-top: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
  margin-top: 0.5rem;
}

<div
  class="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="emotion-3"
        data-test-id="cf-ui-controlled-input"
      >
        <input
          aria-label="Do you agree?"
          class="emotion-0"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="emotion-2"
          for="agree"
        >
          <svg
            class="emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="emotion-3"
        data-test-id="cf-ui-controlled-input"
      >
        <input
          aria-label="Do you really agree?"
          class="emotion-0"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="emotion-2"
          for="reallyAgree"
        >
          <svg
            class="emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-0:checked + label {
  border-color: #0059C8;
  background: #0059C8;
}

.emotion-0:disabled + label {
  border-color: #CFD9E0;
  background: #CFD9E0;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #0059C8;
  background: #0059C8;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #5A657C;
}

.emotion-0:disabled + label {
  border-color: #CFD9E0;
  background: #CFD9E0;
}

.emotion-0:disabled + label svg {
  fill: #CFD9E0;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #CFD9E0;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  font-weight: 500;
  margin-bottom: 0;
}

.emotion-5 {
  margin-bottom: 0;
  margin-top: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
  margin-top: 0.5rem;
}

<div
  class="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="emotion-3"
        data-test-id="cf-ui-controlled-input"
      >
        <input
          aria-label="Do you agree?"
          class="emotion-0"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="emotion-2"
          for="agree"
        >
          <svg
            class="emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="emotion-3"
        data-test-id="cf-ui-controlled-input"
      >
        <input
          aria-label="Do you really agree?"
          class="emotion-0"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="emotion-2"
          for="reallyAgree"
        >
          <svg
            class="emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-0:checked + label {
  border-color: #0059C8;
  background: #0059C8;
}

.emotion-0:disabled + label {
  border-color: #CFD9E0;
  background: #CFD9E0;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #0059C8;
  background: #0059C8;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #5A657C;
}

.emotion-0:disabled + label {
  border-color: #CFD9E0;
  background: #CFD9E0;
}

.emotion-0:disabled + label svg {
  fill: #CFD9E0;
}

.emotion-2 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #CFD9E0;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

.emotion-4 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  font-weight: 500;
  margin-bottom: 0;
}

.emotion-5 {
  margin-bottom: 0;
  margin-top: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
  margin-top: 0.5rem;
}

<div
  class="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="emotion-3"
        data-test-id="cf-ui-controlled-input"
      >
        <input
          aria-label="Do you agree?"
          class="emotion-0"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="emotion-2"
          for="agree"
        >
          <svg
            class="emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="emotion-6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="emotion-3"
        data-test-id="cf-ui-controlled-input"
      >
        <input
          aria-label="Do you really agree?"
          class="emotion-0"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="emotion-2"
          for="reallyAgree"
        >
          <svg
            class="emotion-1"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="emotion-4"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="emotion-5"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;
